--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,12 +14,15 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 BugReports: https://github.com/JacekPardyak/d3r/issues
+Imports:
+    R6
 Suggests:
     IRdisplay,
     rstudioapi,
     shiny,
     selenider,
     utils,
-    chromote
+    chromote,
+    jsonlite
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
